--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Visualizer</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="style.css" rel="stylesheet">
+        <link href="CSS/style.css" rel="stylesheet">
         
 
     </head>
